--- a/templates/login.html
+++ b/templates/login.html
@@ -3,10 +3,7 @@
 {% block content %}
 <form class="form-signin" method="POST" action=''>{% csrf_token %}
   <img class="mb-4" src="../../assets/brand/bootstrap-solid.svg" alt="" width="72" height="72">
-  <h1 class="h3 mb-3 font-weight-normal">Please sign up</h1>
-  {% if error %}
-  {{ error }}
-  {% endif %}
+  <h1 class="h3 mb-3 font-weight-normal">Please log in</h1>
   <!-- name で model と関連付けさせる -->
   <input type="text" id="inputEmail" class="form-control" name='username' placeholder="username" required autofocus>
   <label for="inputPassword" class="sr-only">Password</label>
@@ -14,7 +11,7 @@
   <input type="password" id="inputPassword" class="form-control" name='password' placeholder="Password" required>
   <div class="checkbox mb-3">
   </div>
-  <button class="btn btn-lg btn-primary btn-block" type="submit">Sign up</button>
+  <button class="btn btn-lg btn-primary btn-block" type="submit">log in</button>
   <p class="mt-5 mb-3 text-muted">&copy; 2017-2018</p>
 </form>
 {% endblock content %}
