--- a/templates/list.html
+++ b/templates/list.html
@@ -18,5 +18,6 @@
         <a href="#" class="btn btn-secondary btn" role="button" aria-pressed="true">Link</a>
     </div>
     {% endfor %}
+    <a href="{% url 'logout' %}">ログアウト</a>
 </div>
 {% endblock content %}
