--- a/templates/list.html
+++ b/templates/list.html
@@ -12,7 +12,8 @@
 <div class='container'>
     {% for item in object_list %}
     <div class="alert alert-success" role="alert">
-        <p>タイトル:{{item.title}}</p>
+        <!-- リンク -->
+        <p>タイトル:<a href="{% url 'detail' item.pk %}">{{item.title}}</a></p>  
         <p>投稿者:{{item.author}}</p>
         <a href="#" class="btn btn-primary btn" role="button" aria-pressed="true">Primary link</a>
         <a href="#" class="btn btn-secondary btn" role="button" aria-pressed="true">Link</a>
