--- a/templates/list.html
+++ b/templates/list.html
@@ -15,7 +15,7 @@
         <!-- リンク -->
         <p>タイトル:<a href="{% url 'detail' item.pk %}">{{item.title}}</a></p>  
         <p>投稿者:{{item.author}}</p>
-        <a href="#" class="btn btn-primary btn" role="button" aria-pressed="true">Primary link</a>
+        <a href="#" class="btn btn-primary btn" role="button" aria-pressed="true">いいね: {{item.good}}</a>
         <a href="#" class="btn btn-secondary btn" role="button" aria-pressed="true">Link</a>
     </div>
     {% endfor %}
