--- a/templates/detail.html
+++ b/templates/detail.html
@@ -18,7 +18,7 @@
         <p><img src='{{ object.images.url }}' width=300></p>
         <!-- いいね機能 -->
         <a href="{% url 'good' object.pk %}" class="btn btn-primary btn" role="button" aria-pressed="true">いいねする</a>
-        <a href="#" class="btn btn-secondary btn" role="button" aria-pressed="true">既読にする</a>
+        <a href="{% url 'read' object.pk %}" class="btn btn-secondary btn" role="button" aria-pressed="true">既読にする</a>
     </div>
 </div>
 {% endblock content %}
